# impact-analytics-batch2

./: README.md  Rust_Async_Await.pptx  hello2.txt
10-expressions_control_statements/: Cargo.toml
12-array-slice/: Cargo.toml
13-array-box/: Cargo.toml
19-user-defined-types/: Cargo.toml
20-user-defined-types/: Cargo.toml
22-return-closure/: Cargo.toml
23-closure-dyn/: Cargo.toml
24-any-func/: Cargo.toml
27-user-defined-types_no_mod/: Cargo.toml
28-super/: Cargo.toml
3-strings_concat/: Cargo.toml
30-basic-trait/: Cargo.toml
31-associated-trait/: Cargo.toml
33-struct-lifetimes/: Cargo.toml
34-trait-lifetimes/: Cargo.toml
35-traits-examples/: Cargo.toml
36-fluent-api/: Cargo.toml
39-rc-mutable/: Cargo.toml
41-error-handling/: demo.txt  log.txt
43-thread-error/: Cargo.toml
44-no-mutex-thread/: Cargo.toml
45-mutex-thred/: Cargo.toml
46-channels/: Cargo.toml
47-async-await/: Cargo.toml
48-async-awit-concurrent/: Cargo.toml
49-async-await-spawn/: Cargo.toml
50-async-mutex/: Cargo.toml
51-async-mpsc/: Cargo.toml
55-json-serialize/: Cargo.toml
56-proto_buffer/: Cargo.toml  build.rs
56_c_struct_call/: Cargo.toml  build.rs
57-clang/: Cargo.toml  build.rs
58-tracing-async/: Cargo.toml
6-borrow_rules/: Cargo.toml
60-geometry_app/: Cargo.toml
62-grpc_postgres_crud/: Cargo.toml
62-grpc_postgres_crud/proto/: user.proto
62-grpc_postgres_crud/src/: main.rs
7-raw-global/: Cargo.toml
axum_users_service/: Cargo.toml  README.md
axum_users_service/src/: main.rs  routes.rs
axum_users_service/src/models/: user.rs
(+105 files in other folders)
